# OOP_NSU

Hometask_10/: CMakeLists.txt  Evolution.cpp  main.cpp
Hometask_8/: Evolution.hpp  README.md  main.cpp
Hometask_9/: CMakeLists.txt  Evolution.cpp  Evolution.hpp
Hometask_Time_3_to_7/Clocks_7.2/: Clocks.cpp  README.md  main.cpp
Hometask_Time_3_to_7/Time/: CMakeLists.txt  README.md  Time.cpp  Time.hpp  main.cpp  tests.cpp
Hometask_Time_3_to_7/Time_Friends_7.1/: README.md  Time_Friends.cpp  Time_Friends.hpp  main.cpp
Lab_1(CircularBuffer)/: CMakeLists.txt  CircularBuffer.cpp  CircularBuffer.hpp  README.md  cbTest  tests.cpp
